[package]

name = "urlencoded"
version = "0.1.2"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Michael Sproul <micsproul@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iron/urlencoded"
documentation = "http://ironframework.io/doc/urlencoded/"
description = "Decoding middleware for url-encoded data. For use with Iron."
license = "MIT"

[dependencies]
iron = "*"
url = "*"
plugin = "*"
[dependencies.bodyparser]
git = "https://github.com/reklis/body-parser.git"
rev = "3ff7bf1947edeed28ccc1ee59521d4c928256ede"
